--- a/package.json
+++ b/package.json
@@ -9,17 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@nextui-org/react": "^2.2.10",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@studio-freight/lenis": "^1.0.42",
+    "axios": "^1.6.8",
+    "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.0.3",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.21",
+    "gsap": "^3.12.5",
+    "lucide-react": "^0.360.0",
+    "mongoose": "^8.2.3",
+    "multer": "^1.4.5-lts.1",
+    "next": "14.1.4",
+    "next-cloudinary": "^6.3.0",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "react-hook-form": "^7.51.1",
+    "sonner": "^1.4.41",
+    "swiper": "^11.0.7",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
