--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "14.1.4",
     "next-cloudinary": "^6.3.0",
     "next-themes": "^0.3.0",
+    "nextjs-toploader": "^1.6.11",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
@@ -34,6 +35,7 @@
     "sonner": "^1.4.41",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.2",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
