--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.0.3",
     "clsx": "^2.1.0",
+    "cookies-next": "^4.1.1",
     "framer-motion": "^11.0.21",
     "gsap": "^3.12.5",
     "lucide-react": "^0.360.0",
@@ -34,6 +35,7 @@
     "sharp": "^0.33.3",
     "sonner": "^1.4.41",
     "swiper": "^11.0.7",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.2.2",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
