--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.3.4",
     "@nextui-org/react": "^2.2.10",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@studio-freight/lenis": "^1.0.42",
@@ -20,7 +23,7 @@
     "cloudinary": "^2.0.3",
     "clsx": "^2.1.0",
     "cookies-next": "^4.1.1",
-    "framer-motion": "^11.0.21",
+    "framer-motion": "^11.0.24",
     "gsap": "^3.12.5",
     "lucide-react": "^0.360.0",
     "mongoose": "^8.2.3",
