--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.3.4",
@@ -25,6 +26,7 @@
     "cookies-next": "^4.1.1",
     "framer-motion": "^11.0.24",
     "gsap": "^3.12.5",
+    "lenis": "^1.0.45",
     "lucide-react": "^0.360.0",
     "mongoose": "^8.2.3",
     "multer": "^1.4.5-lts.1",
