--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@studio-freight/lenis": "^1.0.42",
+    "@vercel/analytics": "^1.3.1",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.0.3",
