--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@studio-freight/lenis": "^1.0.42",
     "@vercel/analytics": "^1.3.1",
+    "antd": "^5.24.1",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.0.3",
